--- a/src/db/Cargo.toml
+++ b/src/db/Cargo.toml
@@ -13,5 +13,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_cbor = "0.10"
 libp2p = "0.13.1"
 
+[dev-dependencies]
+serial_test = "0.3.2"
+serial_test_derive = "0.3.2"
+
 
 
